@@ -20,7 +20,9 @@ use Test::Requires "${perl_ver}";
 
 use_ok 'App::MCP::Worker';
 
-my $job = { name => 'remote2' };
+my $job = { condition => 'finished( remote1 )', command   => 'sleep 2',
+            host      => 'head',                name      => 'remote2',
+            type      => 'job',                 user      => 'mcp', };
 
 is App::MCP::Worker->new_with_options
    ( appclass => 'App::MCP', debug => 1, job => $job,
